refactor(ChatRoomService): FriendRepository 의 findFriendsIdsFromUser 사용해서 멤버 목록 가져오도록 변경
- 친구인지 하나씩 검증하는게 아니라 일단 친구 id를 한번에 다 가져다 놓고 거기서 검증하도록 변경